--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
       </div>
     </section><!-- End Portfolio Section -->
-    <section id="facts" class="facts">
+    <!-- <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -345,8 +345,8 @@
         </div>
 
       </div>
-    </section>
-    <section id="services" class="services">
+    </section> -->
+    <!-- <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -423,7 +423,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
