--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>End Portfolio Section
     <!-- <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
