--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-star"></i> <span>Skills</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
-        <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav>
@@ -300,7 +300,7 @@
 
       </div>
     </section>
-    <!-- <section id="facts" class="facts">
+    <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -345,8 +345,8 @@
         </div>
 
       </div>
-    </section> -->
-    <!-- <section id="services" class="services">
+    </section>
+    <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -423,7 +423,7 @@
         </div>
 
       </div>
-    </section> -->
+    </section>
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
